# HASC-Human-AI-Structural-Compatibility-Protocol

./: README.md  SPEC.md  pyproject.toml
examples/: 02_packet_with_omnia_outputs.json  03_generate_report.py
hasc/: envelope.py  score.py
schemas/: hasc_packet.schema.json
