[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hasc-protocol"
version = "0.1.0"
description = "Human-AI Structural Compatibility Protocol (non-semantic, invariant-based)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

[tool.setuptools.packages.find]
where = ["."]
include = ["hasc*"]